--- a/Assignment1/public_html/a1.css
+++ b/Assignment1/public_html/a1.css
@@ -1,13 +1,49 @@
 html {
+    width: 100%;
     height: 100%;
 }
-body {
-    min-height: 100%;
-}
-.task2 {
+
+.task2css {
     background-image: url("http://kep.index.hu/1/0/1040/10401/104017/10401753_3dd66c976c58410699098f1d1fb98c26_wm.jpg");
     background-repeat: no-repeat;
     background-position: bottom right;
     background-attachment: fixed;
-    background-size: 30%;
+    background-size: 15%;
+}
+
+body {
+    min-height: 100%;
+    max-width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+}
+
+.title {
+    font-size: xx-large;
+}
+
+.section {
+    font-size: x-large;
+    font-weight: bolder;
+    padding: 5px 10px;
+}
+
+.subsection {
+    font-size: large;
+    font-weight: bold;
+    padding: 2px 5px;
+}
+
+.center {
+    text-align: center;
+}
+
+.italic {
+    font-style: italic;
+}
+
+.todo {
+    color: red;
+    font-size: 40px;
 }
