--- a/Assignment2/public_html/a2.css
+++ b/Assignment2/public_html/a2.css
@@ -1,7 +1,3 @@
-#chart {
-    border:1px solid blue;
-}
-
 .axis path,
 .axis line {
     fill: none;
@@ -10,4 +6,57 @@
 }
 .axis .tick line {
     stroke: rgba(0, 0, 0, 0.1);
+}
+
+.dot {
+  stroke: #000;
+}
+
+svg {
+    display: block;
+    margin: auto;
+}
+
+/* Copied from assignment 1 */
+
+html {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
+    max-width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+}
+
+.title {
+    font-size: xx-large;
+}
+
+.section {
+    font-size: x-large;
+    font-weight: bolder;
+    padding: 5px 10px;
+}
+
+.subsection {
+    font-size: large;
+    font-weight: bold;
+    padding: 2px 5px;
+}
+
+.center {
+    text-align: center;
+}
+
+.italic {
+    font-style: italic;
+}
+
+.todo {
+    color: red;
+    font-size: 40px;
 }
