--- a/Assignment2/public_html/a2.css
+++ b/Assignment2/public_html/a2.css
@@ -9,7 +9,14 @@
 }
 
 .dot {
-  stroke: #000;
+  fill: #c49515;
+}
+
+.tooltip {
+  position: absolute;
+  width: 200px;
+  height: 28px;
+  pointer-events: none;
 }
 
 svg {
