--- a/Assignment5/public_html/a5.css
+++ b/Assignment5/public_html/a5.css
@@ -1,8 +1,50 @@
-body {
+body.three {
     margin: 0; 
 }
 
 canvas {
     width: 100%;
     height: 100%
+}
+
+html {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+}
+
+.title {
+    font-size: xx-large;
+}
+
+.section {
+    font-size: x-large;
+    font-weight: bolder;
+    padding: 5px 10px;
+}
+
+.subsection {
+    font-size: large;
+    font-weight: bold;
+    padding: 2px 5px;
+}
+
+.center {
+    text-align: center;
+}
+
+.italic {
+    font-style: italic;
+}
+
+.todo {
+    color: red;
+    font-size: 40px;
 }
