--- a/Final/public_html/final.css
+++ b/Final/public_html/final.css
@@ -8,8 +8,8 @@
     stroke: rgba(0, 0, 0, 0.1);
 }
 
-.dot {
-    fill: #c49515;
+circle {
+    fill: #0000ff;
 }
 
 .tooltip {
@@ -38,23 +38,17 @@
     left: -48px;
 }
 
-svg {
-    display: block;
-    margin: auto;
-}
-
-/* Copied from assignment 1 */
-
 html {
     width: 100%;
     height: 100%;
+    min-height: 100%;
 }
 
 body {
-    min-height: 100%;
-    max-width: 60%;
-    margin-left: auto;
-    margin-right: auto;
+    height: 95%;
+    min-height: 95%;
+    max-width: 98%;
+    margin: auto;
     text-align: justify;
 }
 
@@ -80,9 +74,4 @@ body {
 
 .italic {
     font-style: italic;
-}
-
-.todo {
-    color: red;
-    font-size: 40px;
 }
