--- a/Final/public_html/final.css
+++ b/Final/public_html/final.css
@@ -37,6 +37,22 @@ circle:hover {
     box-shadow: rgb(85, 153, 51) -4px 0px 4px 0px inset;
 }
 
+.sidebar {
+    right: 26px;
+    top: 11px;
+    pointer-events: none;
+    position: absolute;
+    width: 170px;
+    padding: 0px 16px 0px 8px;
+    color: rgb(255, 255, 255);
+    background: rgb(96, 172, 57);
+    border: 0px 0px 0px 0px none none none none rgb(255, 255, 255) rgb(70, 126, 42) rgb(255, 255, 255) rgb(255, 255, 255);
+    border-radius: 0px 3.2px 3.2px 0px;
+    text-shadow: rgba(0, 0, 0, 0.6) 1px 1px 1px;
+    box-shadow: rgb(85, 153, 51) 4px 0px -4px 0px inset;
+    text-align: right;
+}
+
 html {
     width: 100%;
     height: 100%;
