--- a/Final/public_html/final.css
+++ b/Final/public_html/final.css
@@ -10,31 +10,46 @@
 
 .line {
     fill: none;
-    stroke: #0000ff;
-    stroke-width: 2px;
+    stroke: #1E90FF;
+    stroke-width: 1.7px;
 }
 
 circle {
-    fill: #00ff00;
+    fill: #000080;
 }
 
 circle:hover {
-    fill:#ffff00;
+    fill: #2222aa;
+}
+
+.popup {
+    position: fixed;
+    top: 20%;
+    left: 20%;
+    width: 60%;
+    height: 80%;
+}
+h1 {
+    text-shadow: 2px 2px #aaaaaa;
+}
+h2 {
+    text-shadow: 2px 2px #aaaaaa;
 }
 
 .tooltip {
-    left: 65px;
+    left: 68px;
     top: 11px;
     pointer-events: none;
     position: absolute;
     width: 128px;
     padding: 0px 16px 0px 8px;
     color: rgb(255, 255, 255);
-    background: rgb(96, 172, 57);
+    background: rgb(0,0,128);
     border: 0px 0px 0px 0px none none none none rgb(255, 255, 255) rgb(70, 126, 42) rgb(255, 255, 255) rgb(255, 255, 255);
     border-radius: 0px 3.2px 3.2px 0px;
     text-shadow: rgba(0, 0, 0, 0.6) 1px 1px 1px;
-    box-shadow: rgb(85, 153, 51) -4px 0px 4px 0px inset;
+    box-shadow: rgb(0,0,84) -4px 0px 4px 0px inset;
+    font-style: bold;
 }
 
 .sidebar {
@@ -65,6 +80,7 @@ body {
     max-width: 98%;
     margin: auto;
     text-align: justify;
+    background: rgb(47, 79, 79);
 }
 
 .title {
