--- a/Final/public_html/final.css
+++ b/Final/public_html/final.css
@@ -28,13 +28,16 @@ circle:hover {
     left: 20%;
     width: 60%;
     height: 80%;
-}
+    text-shadow: 2px 2px #aaaaaa;
+    
+}/*
 h1 {
     text-shadow: 2px 2px #aaaaaa;
 }
 h2 {
     text-shadow: 2px 2px #aaaaaa;
 }
+*/
 
 .tooltip {
     left: 68px;
@@ -46,26 +49,29 @@ h2 {
     color: rgb(255, 255, 255);
     background: rgb(0,0,128);
     border: 0px 0px 0px 0px none none none none rgb(255, 255, 255) rgb(70, 126, 42) rgb(255, 255, 255) rgb(255, 255, 255);
-    border-radius: 0px 3.2px 3.2px 0px;
+    border-radius: 0px 0px 3.2px 0px;
     text-shadow: rgba(0, 0, 0, 0.6) 1px 1px 1px;
-    box-shadow: rgb(0,0,84) -4px 0px 4px 0px inset;
-    font-style: bold;
+    box-shadow: rgb(0,0,84) -4px -4px 2px 1px inset;
+    font-size: 12px;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
 .sidebar {
-    right: 26px;
+    right: 27px;
     top: 11px;
     pointer-events: none;
     position: absolute;
-    width: 170px;
+    width: 230px;
     padding: 0px 16px 0px 8px;
     color: rgb(255, 255, 255);
-    background: rgb(96, 172, 57);
+    background: rgb(0,0,128);
     border: 0px 0px 0px 0px none none none none rgb(255, 255, 255) rgb(70, 126, 42) rgb(255, 255, 255) rgb(255, 255, 255);
-    border-radius: 0px 3.2px 3.2px 0px;
+    border-radius: 0px 0px 0px 3.2px;
     text-shadow: rgba(0, 0, 0, 0.6) 1px 1px 1px;
-    box-shadow: rgb(85, 153, 51) 4px 0px -4px 0px inset;
+    box-shadow: rgb(0,0,84) 4px -4px 4px 3px inset;
     text-align: right;
+    text-shadow: 0px 0px #ffffff;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
 html {
