--- a/Final/public_html/final.css
+++ b/Final/public_html/final.css
@@ -10,8 +10,8 @@
 
 .line {
     fill: none;
-    stroke: #1E90FF;
-    stroke-width: 1.7px;
+    stroke: #00BFFF;
+    stroke-width: 0.3px;
 }
 
 circle {
@@ -28,8 +28,8 @@ circle:hover {
     left: 20%;
     width: 60%;
     height: 80%;
-    text-shadow: 2px 2px #aaaaaa;
-    
+    text-shadow: 1px 2px #333333;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }/*
 h1 {
     text-shadow: 2px 2px #aaaaaa;
