--- a/Final/public_html/final.css
+++ b/Final/public_html/final.css
@@ -27,8 +27,12 @@ circle:hover {
     top: 20%;
     left: 20%;
     width: 60%;
-    height: 80%;
+    /*height: 60%;*/
     text-shadow: 1px 2px #333333;
+    background-color: rgba(169,169,169,0.3);
+    border-color: rgba(255,255,255,0.3);
+    border-style: solid;
+    
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }/*
 h1 {
