--- a/Final/public_html/final.css
+++ b/Final/public_html/final.css
@@ -34,14 +34,25 @@ circle:hover {
     border-style: solid;
     text-align: center;
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-}/*
-h1 {
-    text-shadow: 2px 2px #aaaaaa;
 }
-h2 {
-    text-shadow: 2px 2px #aaaaaa;
+
+.arrow {
+    position: absolute;
+    top: 15px;
+    width: 30px;
+    height: 30px;
+    background-image: url(arrow.png);
+    background-size: cover;
 }
-*/
+
+#leftarrow {
+    right: 185px;
+}
+
+#rightarrow {
+    transform: rotate(180deg);
+    right: 150px;
+}
 
 .tooltip {
     left: 68px;
@@ -78,6 +89,10 @@ h2 {
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
+.invisible {
+    display: none;
+}
+
 html {
     width: 100%;
     height: 100%;
@@ -91,28 +106,4 @@ body {
     margin: auto;
     text-align: justify;
     background: rgb(47, 79, 79);
-}
-
-.title {
-    font-size: xx-large;
-}
-
-.section {
-    font-size: x-large;
-    font-weight: bolder;
-    padding: 5px 10px;
-}
-
-.subsection {
-    font-size: large;
-    font-weight: bold;
-    padding: 2px 5px;
-}
-
-.center {
-    text-align: center;
-}
-
-.italic {
-    font-style: italic;
 }
