--- a/Final/public_html/final.css
+++ b/Final/public_html/final.css
@@ -55,22 +55,22 @@ circle:hover {
 }
 
 .tooltip {
+    position: absolute;
     left: 65px;
     top: 11px;
-    pointer-events: none;
-    position: absolute;
-    width: 128px;
+    width: 110px;
+    height: 43px;
     padding: 0px 16px 0px 8px;
     color: rgb(255, 255, 255);
     background: rgb(65,105,225);
-    border: 0px 0px 0px 0px none none none none rgb(255, 255, 255) rgb(70, 126, 42) rgb(255, 255, 255) rgb(255, 255, 255);
+    border: 1px solid white;
     text-shadow: rgba(0, 0, 0, 0.6) 1px 1px 1px;
     font-size: 12px;
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
 .sidebar {
-    right: 27px;
+    right: 26px;
     top: 11px;
     pointer-events: none;
     position: absolute;
@@ -78,7 +78,7 @@ circle:hover {
     padding: 0px 16px 0px 8px;
     color: rgb(255, 255, 255);
     background: rgb(65,105,225);
-    border: 0px 0px 0px 0px none none none none rgb(255, 255, 255) rgb(70, 126, 42) rgb(255, 255, 255) rgb(255, 255, 255);
+    border: 1px solid white;
     text-shadow: rgba(0, 0, 0, 0.6) 1px 1px 1px;
     text-align: right;
     text-shadow: 0px 0px #ffffff;
