--- a/Final/public_html/final.css
+++ b/Final/public_html/final.css
@@ -8,6 +8,14 @@
     stroke: rgba(0, 0, 0, 0.1);
 }
 
+.event {
+    fill: #79e11b;
+}
+
+.event:hover {
+    fill: #e8f527;
+}
+
 text {
     fill: #e6e6e6;
 }
@@ -16,14 +24,6 @@ text {
     fill: none;
     stroke: #00BFFF;
     stroke-width: 0.3px;
-}
-
-circle {
-    fill: #000080;
-}
-
-circle:hover {
-    fill: #2222aa;
 }
 
 .popup {
@@ -57,33 +57,32 @@ circle:hover {
     right: 150px;
 }
 
-.tooltip {
+.panel {
     position: absolute;
+    background: rgb(65,105,225);
+    border: 1px solid white;
+    text-shadow: rgba(0, 0, 0, 0.6) 1px 1px 1px;
+    font-size: 12px;
+    opacity: .8;
+}
+
+#tooltip {
     left: 65px;
     top: 11px;
     width: 110px;
     height: 43px;
     padding: 0px 16px 0px 8px;
-    background: rgb(65,105,225);
-    border: 1px solid white;
-    text-shadow: rgba(0, 0, 0, 0.6) 1px 1px 1px;
-    font-size: 12px;
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
-.sidebar {
+#sidebar {
     right: 26px;
     top: 11px;
     pointer-events: none;
-    position: absolute;
     width: 230px;
     padding: 0px 16px 0px 8px;
-    background: rgb(65,105,225);
-    border: 1px solid white;
     text-shadow: rgba(0, 0, 0, 0.6) 1px 1px 1px;
     text-align: right;
     text-shadow: 0px 0px #ffffff;
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
 .invisible {
@@ -104,4 +103,5 @@ body {
     text-align: justify;
     color: white;
     background: rgb(47, 79, 79);
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
