--- a/Final/public_html/final.css
+++ b/Final/public_html/final.css
@@ -8,6 +8,10 @@
     stroke: rgba(0, 0, 0, 0.1);
 }
 
+.reader {
+    fill: #ededed;
+}
+
 .eventline {
     stroke: #79e11b;
 }
@@ -31,7 +35,7 @@ text {
     stroke-width: 0.3px;
 }
 
-.popup {
+#popup {
     z-index: 999;
     position: fixed;
     top: 6%;
